--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <title>😊Suttipong</title>
+  <title>😊OME</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
